# go-tensorflow

./: .gitignore  README.md  go.mod
tensorflow/c/eager/: c_api.h  gokeep.go
tensorflow/go/: lib.go
wrapper/: CMakeLists.txt  c_api.cpp  tf_datatype.cpp  tf_status.cpp  tf_tensor.cpp
wrapper/eager/: c_api.cpp
